--- a/Theme2.ipynb
+++ b/Theme2.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "c891f53c",
+   "execution_count": 45,
+   "id": "b95f3c62",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Accuracy: 1.0\n",
       "Input: [0, 0], Predicted Output: 0.0617\n",
       "Input: [0, 1], Predicted Output: 0.9638\n",
       "Input: [1, 0], Predicted Output: 0.9637\n",
@@ -60,17 +61,20 @@
     "    # Прямой проход (feedforward)\n",
     "    def feedforward(self, x):\n",
     "        # Входной слой -> Первый скрытый слой\n",
-    "        self.hidden1 = [relu(sum(x[j] * self.weights1[j][i] for j in range(self.input_size)) + self.bias1[i]) for i in range(self.hidden_size)]\n",
+    "        self.hidden1 = [relu(sum(x[j] * self.weights1[j][i] for j in range(self.input_size)) + self.bias1[i])\\\n",
+    "                        for i in range(self.hidden_size)]\n",
     "\n",
     "        # Первый скрытый слой -> Второй скрытый слой\n",
-    "        self.hidden2 = [relu(sum(self.hidden1[j] * self.weights2[j][i] for j in range(self.hidden_size)) + self.bias2[i]) for i in range(self.hidden_size)]\n",
+    "        self.hidden2 = [relu(sum(self.hidden1[j] * self.weights2[j][i] for j in range(self.hidden_size)) + self.bias2[i])\\\n",
+    "                        for i in range(self.hidden_size)]\n",
     "\n",
     "        # Второй скрытый слой -> Выходной слой\n",
-    "        self.output = [sigmoid(sum(self.hidden2[j] * self.weights3[j][i] for j in range(self.hidden_size)) + self.bias3[i]) for i in range(self.output_size)]\n",
+    "        self.output = [sigmoid(sum(self.hidden2[j] * self.weights3[j][i] for j in range(self.hidden_size)) + self.bias3[i])\\\n",
+    "                       for i in range(self.output_size)]\n",
     "        \n",
     "        return self.output[0]\n",
     "\n",
-    "    # Обратное распространение ошибки\n",
+    "    \n",
     "    def backpropagate(self, x, y, learning_rate):\n",
     "        # Ошибка на выходе\n",
     "        output_error = (self.output[0] - y) * sigmoid_derivative(self.output[0])\n",
@@ -87,7 +91,8 @@
     "        d_bias2 = hidden2_error\n",
     "\n",
     "        # Ошибка для первого скрытого слоя\n",
-    "        hidden1_error = [sum(hidden2_error[k] * self.weights2[i][k] for k in range(self.hidden_size)) * relu_derivative(self.hidden1[i]) for i in range(self.hidden_size)]\n",
+    "        hidden1_error = [sum(hidden2_error[k] * self.weights2[i][k] for k in range(self.hidden_size))\\\n",
+    "                         * relu_derivative(self.hidden1[i]) for i in range(self.hidden_size)]\n",
     "\n",
     "        # Градиенты для weights1 и bias1\n",
     "        d_weights1 = [[hidden1_error[i] * x[j] for j in range(self.input_size)] for i in range(self.hidden_size)]\n",
@@ -123,16 +128,165 @@
     "# Обучение\n",
     "nn = SimpleNeuralNetwork()\n",
     "nn.train(data, labels, epochs=10000, learning_rate=0.01)\n",
-    "\n",
     "# Тест\n",
+    "g=0\n",
+    "c = 0\n",
+    "# Тест\n",
+    "for x in data*100:\n",
+    "    predicted_output = round(nn.feedforward(x))\n",
+    "    if bool(predicted_output) == bool(x[0] != x[1]):\n",
+    "        g+=1\n",
+    "    c+=1\n",
+    "print(f\"Accuracy: {g/c}\")\n",
     "for x in data:\n",
-    "    print(f\"Input: {x}, Predicted Output: {nn.feedforward(x):.4f}\")"
+    "    print(f\"Input: {x}, Predicted Output: {nn.feedforward(x):.4f}\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "41310180",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "# Функция активации и её производная (ReLU и сигмоид)\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + math.exp(-x))\n",
+    "\n",
+    "def sigmoid_derivative(x):\n",
+    "    return x * (1 - x)\n",
+    "\n",
+    "def relu(x):\n",
+    "    return max(0, x)\n",
+    "\n",
+    "def relu_derivative(x):\n",
+    "    return 1 if x > 0 else 0\n",
+    "\n",
+    "\n",
+    "def init_fixed_weights(rows, cols, value=0.25):\n",
+    "    return [[value+0.1*i for i in range(cols)] for _ in range(rows)]\n",
+    "\n",
+    "\n",
+    "class SimpleNeuralNetwork:\n",
+    "    def __init__(self):\n",
+    "\n",
+    "        self.input_size = 5  # Мы делаем входной вектор размером 5\n",
+    "        self.hidden_size = 5\n",
+    "        self.output_size = 1\n",
+    "\n",
+    "        self.weights1 = init_fixed_weights(self.input_size, self.hidden_size, value=0.5)\n",
+    "        self.bias1 = [-0.5+0.2*i for i in range(self.hidden_size)]\n",
+    "\n",
+    "        self.weights2 = init_fixed_weights(self.hidden_size, self.hidden_size, value=0.1)\n",
+    "        self.bias2 = [-0.25+0.1*i for i in range(self.hidden_size)]\n",
+    "\n",
+    "        self.weights3 = init_fixed_weights(self.hidden_size, self.output_size, value=-0.5)\n",
+    "        self.bias3 = [-0.05+0.05*i for i in range(self.output_size)]\n",
+    "\n",
+    "\n",
+    "    def feedforward(self, x):\n",
+    "\n",
+    "        self.hidden1 = [relu(sum(x[j] * self.weights1[j][i] for j in range(self.input_size)) + self.bias1[i])\n",
+    "                        for i in range(self.hidden_size)]\n",
+    "\n",
+    "        self.hidden2 = [relu(sum(self.hidden1[j] * self.weights2[j][i] for j in range(self.hidden_size)) + self.bias2[i])\n",
+    "                        for i in range(self.hidden_size)]\n",
+    "\n",
+    " \n",
+    "        self.output = [sigmoid(sum(self.hidden2[j] * self.weights3[j][i] for j in range(self.hidden_size)) + self.bias3[i])\n",
+    "                       for i in range(self.output_size)]\n",
+    "        \n",
+    "        return self.output[0]\n",
+    "\n",
+    "    def backpropagate(self, x, y, learning_rate):\n",
+    "\n",
+    "        output_error = (self.output[0] - y) * sigmoid_derivative(self.output[0])\n",
+    "\n",
+    "      \n",
+    "        d_weights3 = [[output_error * self.hidden2[j] for j in range(self.hidden_size)]]\n",
+    "        d_bias3 = [output_error]\n",
+    "\n",
+    "   \n",
+    "        hidden2_error = [output_error * self.weights3[j][0] * relu_derivative(self.hidden2[j]) for j in range(self.hidden_size)]\n",
+    "\n",
+    "        \n",
+    "        d_weights2 = [[hidden2_error[i] * self.hidden1[j] for j in range(self.hidden_size)] for i in range(self.hidden_size)]\n",
+    "        d_bias2 = hidden2_error\n",
+    "\n",
+    "  \n",
+    "        hidden1_error = [sum(hidden2_error[k] * self.weights2[i][k] for k in range(self.hidden_size)) *\n",
+    "                         relu_derivative(self.hidden1[i]) for i in range(self.hidden_size)]\n",
+    "\n",
+    "        d_weights1 = [[hidden1_error[i] * x[j] for j in range(self.input_size)] for i in range(self.hidden_size)]\n",
+    "        d_bias1 = hidden1_error\n",
+    "\n",
+    "\n",
+    "        for i in range(self.hidden_size):\n",
+    "            for j in range(self.output_size):\n",
+    "                self.weights3[i][j] -= learning_rate * d_weights3[0][i]\n",
+    "            self.bias3[j] -= learning_rate * d_bias3[j]\n",
+    "\n",
+    "        for i in range(self.hidden_size):\n",
+    "            for j in range(self.hidden_size):\n",
+    "                self.weights2[i][j] -= learning_rate * d_weights2[i][j]\n",
+    "            self.bias2[i] -= learning_rate * d_bias2[i]\n",
+    "\n",
+    "        for i in range(self.hidden_size):\n",
+    "            for j in range(self.input_size):\n",
+    "                self.weights1[j][i] -= learning_rate * d_weights1[i][j]\n",
+    "            self.bias1[i] -= learning_rate * d_bias1[i]\n",
+    "\n",
+    "\n",
+    "    def train(self, data, labels, epochs, learning_rate):\n",
+    "        for epoch in range(epochs):\n",
+    "            for x, y in zip(data, labels):\n",
+    "                self.feedforward(x)\n",
+    "                self.backpropagate(x, y, learning_rate)\n",
+    "\n",
+    "\n",
+    "def pearson_arrow_logic(x):\n",
+    "\n",
+    "    return (not x[0] or x[1]) and (not x[2] or x[3]) and (not x[4] or True)\n",
+    "\n",
+    "\n",
+    "data = [\n",
+    "    [0, 0, 0, 0, 0], \n",
+    "    [0, 1, 1, 1, 1], \n",
+    "    [1, 0, 1, 0, 0], \n",
+    "    [1, 1, 1, 1, 0]   \n",
+    "]\n",
+    "\n",
+    "labels = [pearson_arrow_logic(x) for x in data]  # Применяем логическую функцию для меток\n",
+    "\n",
+    "# Обучение\n",
+    "nn = SimpleNeuralNetwork()\n",
+    "nn.train(data, labels, epochs=10000, learning_rate=0.01)\n",
+    "g=0\n",
+    "c = 0\n",
+    "# Тест\n",
+    "for x in data*100:\n",
+    "    predicted_output = round(nn.feedforward(x))\n",
+    "    if bool(predicted_output) == bool(pearson_arrow_logic(x)):\n",
+    "        g+=1\n",
+    "    c+=1\n",
+    "print(f\"Accuracy: {g/c}\")\n",
+    "                                  \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dc0ca17",
+   "id": "c2997238",
    "metadata": {},
    "outputs": [],
    "source": []
