--- a/Theme3.ipynb
+++ b/Theme3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "336caa42",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Training stopped after 49 epochs.\n",
       "Accuracy: 1.0\n",
       "Precision: 1.0\n",
       "Recall: 1.0\n",
@@ -100,11 +101,16 @@
     "                self.weights1[j][i] -= learning_rate * d_weights1[i][j]\n",
     "            self.bias1[i] -= learning_rate * d_bias1[i]\n",
     "\n",
-    "    def train(self, data, labels, epochs, learning_rate):\n",
-    "        for epoch in range(epochs):\n",
+    "    def train(self, data, labels, learning_rate, stop_probability=0.01):\n",
+    "        epoch = 0\n",
+    "        while True:\n",
     "            for x, y in zip(data, labels):\n",
     "                self.feedforward(x, training=True)\n",
     "                self.backpropagate(x, y, learning_rate)\n",
+    "            epoch += 1\n",
+    "            if random.random() < stop_probability:\n",
+    "                print(f\"Training stopped after {epoch} epochs.\")\n",
+    "                break\n",
     "\n",
     "def pearson_arrow_logic(x):\n",
     "    return (not x[0] or x[1]) and (not x[2] or x[3]) and (not x[4] or True)\n",
@@ -119,7 +125,7 @@
     "test_labels = labels[train_size:]\n",
     "\n",
     "nn = SimpleNeuralNetwork(dropout_rate=0.2)\n",
-    "nn.train(train_data, train_labels, epochs=1000, learning_rate=0.01)\n",
+    "nn.train(train_data, train_labels, learning_rate=0.01)\n",
     "\n",
     "predictions = [round(nn.feedforward(x)) for x in test_data]\n",
     "\n",
